overflow fix

--- a/src/components/Home/JournalPlan.module.css
+++ b/src/components/Home/JournalPlan.module.css
@@ -121,6 +121,8 @@
     flex-direction: column;
     padding: 0 20px;
     position: relative;
+    max-width: 100vw;
+    overflow: hidden;
   }
   .journalTextCol {
     padding: 0 0 40px 0 ;
